--- a/templates/reports.html
+++ b/templates/reports.html
@@ -6,6 +6,7 @@
 <!-- report page -->
 {% block page_contents %}
 <div class = "report">
+
 <!-- report : summary for District water engineer -->
 {% if interface == 'engineerSummary' %}
 <!-- information about current user and logout option -->	
@@ -60,7 +61,7 @@
 <td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
 <td><b>{{water_connections_total}}</b></td>
 </tr>
-</table class="table table-striped">
+</table >
 
 </div>
 <div class = "tab-pane " id = "tab2">
@@ -99,6 +100,7 @@
 
 
 {% endif %}
+<!-- ************************************ end report part **************************************** -->
 
 <!-- report : water connections for District water engineer -->
 {% if interface == 'engineerWaterConections' %}
@@ -173,6 +175,8 @@
 <hr>
 <p>This part is still under develepment.....</p>
 {% endif %}
+<!-- ************************************ end report part **************************************** -->
+
 
 <!-- report : COWSO Chairpersons for District water engineer -->
 {% if interface == 'cowsoSummaryEngineer' %}
@@ -217,6 +221,7 @@ cowsolist :{{cowsolist}}<br>
 -->
 <p>This part is still under develepment.....</p>
 {% endif %}
+<!-- ************************************ end report part **************************************** -->
 
 
 <!-- report : water connections for System Administrator -->
@@ -224,39 +229,142 @@ cowsolist :{{cowsolist}}<br>
 <!-- information about current user and logout option -->
 <span class ='pull-right welcomeinfo'>{{welcome_info}},<i>&#160;{{user.admin_name}}.</i>&#160;&#160;<a href = "{% url 'log_out'  user.id user.e_mail user.password position %}" >log out</a><br><a href = "{% url 'adminhome' user.id %}">back</a></span><br>
 <hr>
+<p class = 'uppercase'><u>summary for water connection in the united republic of tanzania:</u></p>
+<p style = 'text-align:justify;'>In summary, In summary, in <span style ='text-transform:capitalize;'><b>the united republic of tanzania</b></span>, there are the following water connections in statistics depening on their water connection category
 
-waterpoint_connection_no: {{waterpoint_connection_no}}<br>
-domestic_connection_no:{{domestic_connection_no}}<br>
-business_connection_no:{{business_connection_no}}<br>
-institutional_connection_no:{{institutional_connection_no}}<br>
-industrial_connection_no:{{industrial_connection_no}}<br>
-water_connections_total:{{water_connections_total}}
+ </p><hr>
+<hr>
+<table class="table table-striped">
+<tr>
+<th>Water Connection category</th>
+<th>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</th>
+<th>Number of water connections available</th>
+</tr>
+<tr>
+<td>water point or kiosk</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{waterpoint_connection_no}}</td>
+</tr>
+<tr>
+<td>domestic connection</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{domestic_connection_no}}</td>
+</tr>
+<tr>
+<td>business connection</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{business_connection_no}} </td>
+</tr>
+<tr>
+<td>institutional connection</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{institutional_connection_no}}</td>
+</tr>
+<tr>
+<td>industrial connection</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{industrial_connection_no}}</td>
+</tr>
+<tr>
+<td><b>total water connections</b></td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td><b>{{water_connections_total}}</b></td>
+</tr>
+</table >
 
 <hr>
+<p>Searching forms</p>
 <p>This part is still under develepment.....</p>
 {% endif %}
+<!-- ************************************ end report part **************************************** -->
+
 
 <!-- report : COWSO Chairperson for System Administrator -->
 {% if interface == 'cowsoSummaryAdmin' %}
 <!-- information about current user and logout option -->
-<span class ='pull-right welcomeinfo'>{{welcome_info}},<i>&#160;{{user.admin_name}}.</i>&#160;&#160;<a href = "{% url 'log_out'  user.id user.e_mail user.password position %}" >log out</a><br><a href = "{% url 'adminhome' user.id %}">back</a></span><br>
+<span class = 'pull-right welcomeinfo'>{{welcome_info}},<i>&#160;{{user.admin_name}}.</i>&#160;&#160;<a href = "{% url 'log_out'  user.id user.e_mail user.password position %}" >log out</a><br><a href = "{% url 'adminhome' user.id %}">back</a></span><br>
 <hr>
- 
+<p style = 'text-align:justify;'>In summary, in <span style='text-transform:capitalize;'><b>the united republic of tanzania</b></span>, the following is statistics about all COWSO chairperson.
+They responsible for update all water connections status in their particular street or village</p>
+<hr>
+<table class="table table-striped">
+<thead>
+<th>Sex or Gender</th>
+<th>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</th>
+<th>Number of COWSO chaiperson</th>
+</tr>
+<tr>
+</thead>
+
+<tbody>	
+<tr>
+<td>Male</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{cowsomale_no}}</td>
+</tr>
+<tr>
+<td>Female</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{cowsofemale_no}}</td>
+</tr>
+<tr>
+<td><b>Total</b></td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td><b>{{cowso_total}}</b></td>
+</tr>
+</tbody>
+</table>
 
 <hr>
+<p>Searching forms</p>
 <p>This part is still under develepment.....</p>
 {% endif %}
+<!-- ************************************ end report part **************************************** -->
+
 
 <!-- report : District water Engineer for System Administrator -->
 {% if interface == 'engineerSummaryAdmin' %}
 <!-- information about current user and logout option -->
 <span class ='pull-right welcomeinfo'>{{welcome_info}},<i>&#160;{{user.admin_name}}.</i>&#160;&#160;<a href = "{% url 'log_out'  user.id user.e_mail user.password position %}" >log out</a><br><a href = "{% url 'adminhome' user.id %}">back</a></span><br>
 <hr>
- engineeermale_no:{{engineeermale_no}}<br>
-engineeerfemale_no:{{engineeerfemale_no}}<br>
-engineeer_total:{{engineeer_total}}<br>
+<p style = 'text-align:justify;'>In summary, in <span style ='text-transform:capitalize;'><b>the united republic of tanzania</b></span>, the following is statistics about all District Water Engineer.
+They responsible for register water connections depend on its category in their respective district including uploading photo or images for a given water connection.
+The category of water connection can water point/kiosk or business or institutional or industrial or domestic connections.
+</p>
 <hr>
+<table class="table table-striped">
+<thead>
+<th>Sex or Gender</th>
+<th>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</th>
+<th>Number of District Water Engineer</th>
+</tr>
+<tr>
+</thead>
+
+<tbody>	
+<tr>
+<td>Male</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{engineeermale_no}}</td>
+</tr>
+<tr>
+<td>Female</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{engineeerfemale_no}}</td>
+</tr>
+<tr>
+<td><b>Total</b></td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td><b>{{engineeer_total}}</b></td>
+</tr>
+</tbody>
+</table>
+<hr>
+
+<p>Searching forms</p>
 <p>This part is still under develepment.....</p>
 {% endif %}
+<!-- ************************************ end report part **************************************** -->
+
 </div>
 {% endblock%}
