update headers in admin and District water engineer interface

--- a/templates/users.html
+++ b/templates/users.html
@@ -14,7 +14,7 @@
 
 <div class = 'row-fluid'>
 <div class = 'span4 datails_in_admin_ui'>
-<p>District water Engineer</p>
+<p><b><i>The registration for District water Engineer</i></b></p>
 District water Engineer is one involving to add static infromation.<br>	
 To add successful register new District water Engineer in the system :<br>
 <ul>
@@ -26,7 +26,7 @@ To add successful register new District water Engineer in the system :<br>
 </div>	
 
 <div class = 'span4 datails_in_admin_ui'>
-<p>COWSO chairperson</p>
+<p><b><i>The registeration for COWSO chairperson</i></b></p>
 COWSO chairperson is one involving to add dynamic infromation.<br>	
 To add successful register new District water Engineer in the system :<br>
 <ul>
@@ -68,6 +68,7 @@ To add successful register new District water Engineer in the system :<br>
 
 <!-- water supply connection details -->	
 <div class = "span4 detail_on_engineer_ui">
+<p><b><i>The registration for water connection</i></b></p>	
 <p>
 To register new water supply connection
 </p>
@@ -81,6 +82,7 @@ To register new water supply connection
 
 <!-- water supply connection images upload -->
 <div class = "span4 detail_on_engineer_ui">
+<p><b><i>Image's upload for water connection</i></b></p>	
 <p>
 To upload image for a given water supply connection:
 </p>
