--- a/templates/reports.html
+++ b/templates/reports.html
@@ -108,7 +108,7 @@
 <span class ='pull-right welcomeinfo'>{{welcome_info}}<i>,&#160;{{user.engineer_name}}<b>&#160;.</b></i>&#160;&#160;<a href = "{% url 'log_out' user.id user.e_mail user.password position %}" >log out</a><br> <a href = "{% url 'engineerhome' user.id %}">back</a></span><br><hr>
 <!-- waterconnection interface on Engineer -->
 <p class = 'uppercase'><u>Water connections in {{user.district}} district:</u></p>
-<p style = 'text-align:justify;'>The following are list of names of all water connections in {{user.district}} district, depend on their connection category:-</p><hr>
+<p style = 'text-align:justify;'>The following are list of names of all water connections in {{user.district}} district, depend on their connection category. To view more details for a given water connection click a given water connection</p><hr>
 <div class ="tabbable  ">
 <ul class = "nav nav-tabs" >
 
@@ -123,7 +123,7 @@
 <div class = "tab-pane  active" id = "tab1">
 {%if waterpoint_connection %}
 {% for kiosk in waterpoint_connection%}
-&#160;&#160;&#160;{{kiosk}}
+&#160;&#160;&#160;<a href ="">{{kiosk}}</a><br>
 {% endfor %}
 {% else %}
 <p>&#160;&#160;&#160;In {{user.district}} district, there  is no water connection of water point or kiosk connection category</p>
@@ -133,7 +133,7 @@
 <div class = "tab-pane " id = "tab2">
 {%if domestic_connection %}
 {% for domestic in domestic_connection%}
-&#160;&#160;&#160;{{domestic}}
+&#160;&#160;&#160;<a href ="">{{domestic}}</a><br>
 {% endfor %}
 {% else %}
 <p>&#160;&#160;&#160;In {{user.district}} district, there  is no water connection of domestic connection category </p>
@@ -143,7 +143,7 @@
 <div class = "tab-pane" id = "tab3">
 {%if business_connection %}
 {% for business in business_connection%}
-&#160;&#160;&#160;{{business}}
+&#160;&#160;&#160;<a href ="">{{business}}</a><br>
 {% endfor %}
 {% else %}
 <p>&#160;&#160;&#160;In {{user.district}} district, there  is no water connection of business connection category </p>
@@ -153,7 +153,7 @@
 <div class = "tab-pane " id = "tab4">
 {%if institutional_connection %}
 {% for institutional in institutional_connection%}
-&#160;&#160;&#160;{{institutional}}
+&#160;&#160;&#160;<a href ="">{{institutional}}</a><br>
 {% endfor %}
 {% else %}
 <p>&#160;&#160;&#160;In {{user.district}} district, there  is no water connection of institutional connection category </p>
@@ -163,7 +163,7 @@
 <div class = "tab-pane" id = "tab5">
 {%if industrial_connection %}
 {% for industrial in industrial_connection%}
-&#160;&#160;&#160;{{industrial}}
+&#160;&#160;&#160;<a href ="">{{industrial}}</a><br>
 {% endfor %}
 {% else %}
 <p>&#160;&#160;&#160;In {{user.district}} district, there  is no water connection of industrial connection category</p>
