--- a/templates/reports.html
+++ b/templates/reports.html
@@ -123,7 +123,7 @@
 <div class = "tab-pane  active" id = "tab1">
 {%if waterpoint_connection %}
 {% for kiosk in waterpoint_connection%}
-&#160;&#160;&#160;<a href ="">{{kiosk}}</a><br>
+&#160;&#160;&#160;<a href ="{% url 'water_connection_details_from_engineer' user.id kiosk.id %}">{{kiosk}}</a><br>
 {% endfor %}
 {% else %}
 <p>&#160;&#160;&#160;In {{user.district}} district, there  is no water connection of water point or kiosk connection category</p>
@@ -133,7 +133,7 @@
 <div class = "tab-pane " id = "tab2">
 {%if domestic_connection %}
 {% for domestic in domestic_connection%}
-&#160;&#160;&#160;<a href ="">{{domestic}}</a><br>
+&#160;&#160;&#160;<a href ="{% url 'water_connection_details_from_engineer' user.id domestic.id  %}">{{domestic}}</a><br>
 {% endfor %}
 {% else %}
 <p>&#160;&#160;&#160;In {{user.district}} district, there  is no water connection of domestic connection category </p>
@@ -143,7 +143,7 @@
 <div class = "tab-pane" id = "tab3">
 {%if business_connection %}
 {% for business in business_connection%}
-&#160;&#160;&#160;<a href ="">{{business}}</a><br>
+&#160;&#160;&#160;<a href ="{% url 'water_connection_details_from_engineer' user.id business.id %}">{{business}}</a><br>
 {% endfor %}
 {% else %}
 <p>&#160;&#160;&#160;In {{user.district}} district, there  is no water connection of business connection category </p>
@@ -153,7 +153,7 @@
 <div class = "tab-pane " id = "tab4">
 {%if institutional_connection %}
 {% for institutional in institutional_connection%}
-&#160;&#160;&#160;<a href ="">{{institutional}}</a><br>
+&#160;&#160;&#160;<a href ="{% url 'water_connection_details_from_engineer' user.id institutional.id  %}">{{institutional}}</a><br>
 {% endfor %}
 {% else %}
 <p>&#160;&#160;&#160;In {{user.district}} district, there  is no water connection of institutional connection category </p>
@@ -163,7 +163,7 @@
 <div class = "tab-pane" id = "tab5">
 {%if industrial_connection %}
 {% for industrial in industrial_connection%}
-&#160;&#160;&#160;<a href ="">{{industrial}}</a><br>
+&#160;&#160;&#160;<a href ="{% url 'water_connection_details_from_engineer' user.id industrial.id %}">{{industrial}}</a><br>
 {% endfor %}
 {% else %}
 <p>&#160;&#160;&#160;In {{user.district}} district, there  is no water connection of industrial connection category</p>
