--- a/templates/moredetails.html
+++ b/templates/moredetails.html
@@ -10,12 +10,167 @@
 
 <!-- cowso chairperson details -->
 {% if detail == 'cowso_engineer' %}
-requested cowso : {{cowso}}<br>
+
+<table class = "" align="center">
+<tbody>	
+<tr>
+<td>cowso_id</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{cowso.id}}</td>
+</tr>
+<tr>
+<td>cowso_chairperson_name</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{cowso.cowso_chairperson_name}}</td>
+</tr>
+<tr>
+<td>password</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{cowso.password}}</td>
+</tr>
+<tr>
+<td>e_mail</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{cowso.e_mail}}</td>
+</tr>
+<tr>
+<td>telphone_number</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{cowso.telphone_number}}</td>
+</tr>
+<tr>
+<td>address</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{cowso.address}}</td>
+</tr>
+<tr>
+<td>district</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{cowso.district}}</td>
+</tr>
+<tr>
+<td>region</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{cowso.region}}</td>
+</tr>
+<tr>
+<td>physical_location_name</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{cowso.physical_location_name}}</td>
+</tr>
+<tr>
+<td>sex</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{cowso.sex}}</td>
+</tr>
+<tr>
+</tbody>
+
+</table>
+
 {% endif %}
 
 <!-- water connection details -->
 {% if detail == 'water_connection_engineer' %}
-requested waterconnection : {{water_connection}}
+<p style = 'text-align:justify'></p>
+
+<div class ="tabbable  ">
+<ul class = "nav nav-tabs">
+
+<li class = "span4 active" ><a href = "#tab1" data-toggle = "tab">Water Connection Details</a></li>
+<li class = "span4" ><a href = "#tab2" data-toggle = "tab">Water connection Status history</a></li>
+<li class = "span4"><a href = "#tab3" data-toggle = "tab">water connection photos</a></li>
+</ul>
+<div class = "tab-content">
+<div class = "tab-pane  active" id = "tab1">
+<table class = "">
+<tbody>	
+<tr>
+<td>code_number</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{water_connection.code_number}}</td>
+</tr>
+<tr>
+<td>name</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{water_connection.name}}</td>
+</tr>
+<tr>
+<td>source_name</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{water_connection.source_name}}</td>
+</tr>
+<tr>
+<td>supply_connection</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{water_connection.supply_connection}}</td>
+</tr>
+<td>district</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{water_connection.district}}</td>
+</tr>
+<tr>
+<td>region</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{water_connection.region}}</td>
+</tr>
+<tr>
+<td>physical_location_name</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{water_connection.physical_location_name}}</td>
+</tr>
+<tr>
+<td>latitude</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{water_connection.latitude}}</td>
+</tr>
+<tr>
+<tr>
+<td>longitude</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{water_connection.sex}}</td>
+</tr>
+<tr>
+<tr>
+<td>fund</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{water_connection.fund}}</td>
+</tr>
+<tr>
+<tr>
+<td>sponsor</td>
+<td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</td>
+<td>{{water_connection.sponsor}}</td>
+</tr>
+<tr>			
+</tbody>
+
+</table>	
+	
+
+</div>
+<div class = "tab-pane " id = "tab2">
+{%if statuslist %}
+{% for status in statuslist %}
+{{status}}<br>
+{% endfor %}
+{% else %}
+<p>Currently this water connection has not been updated</p>
+{% endif %}		
+
+</div>
+<div class = "tab-pane" id = "tab3">
+{%if imagelist %}
+{% for image  in imagelist%}
+{{image}}<br>
+{% endfor %}
+{% else %}
+nkfkdj
+{% endif %}		
+</div>
+</div>
+</div>
+
 {% endif %}
 
 {% endif %}
