complete draft for summary and report for a given district

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -64,9 +64,12 @@ font-size:17px;
 text-transform:uppercase;
 }
 td{
-text-transform:capitalize
+text-transform:capitalize;
 }
 .report{
+color:#4D4D4D;
+}
+.more_information{
 color:#4D4D4D;
 }
 
