update base templates and changes in rendered templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -28,12 +28,12 @@
 <div class='container-fluid'  style = 'background-image:url("{{MEDIA_URL}}img/");'>
 	
 <div class = 'row-fluid '>
-<div class = 'well' style = 'background-image:url("{{MEDIA_URL}}img/page.jpg");margin-top:50px;'>
+<div class = 'well' style = 'background-image:url("{{MEDIA_URL}}img/background.jpg");margin-top:50px;'>
 <p class = 'title_of_site'>
 The United Republic of Tanzania<br>
-Ministry of water<br>
+Ministry of water
 </p>	
-<p class = 'head_of_site'>STATIC AND DYNAMIC WATER POINT INFORMATION  MANAGEMENT</p>
+<p class = 'head_of_site'>STATIC AND DYNAMIC WATER CONNECTIONS INFORMATION  MANAGEMENT</p>
 </div>
 <!--
 contents of the pages
